# IMProject/docs/swagger.json
@@ -1,9 +1,57 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "一个go的即时通信项目.",
+        "title": "IM即时通信",
+        "termsOfService": "API服务条款",
+        "contact": {
+            "name": "霖霖",
+            "url": "http://www.swagger.io/support",
+            "email": "1589861957@qq.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/lin/im/v1",
     "paths": {
+        "/user/createUser": {
+            "post": {
+                "description": "创建用户",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "首页"
+                ],
+                "summary": "创建用户",
+                "parameters": [
+                    {
+                        "description": "创建用户",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UserBase"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.LinResult"
+                        }
+                    }
+                }
+            }
+        },
         "/user/test": {
             "get": {
                 "description": "swagger测试描述",
@@ -21,11 +69,37 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "struct"
+                            "$ref": "#/definitions/common.LinResult"
                         }
                     }
                 }
             }
         }
+    },
+    "definitions": {
+        "common.LinResult": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserBase": {
+            "type": "object"
+        }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
+        }
+    },
+    "externalDocs": {
+        "description": "OpenAPI",
+        "url": "https://swagger.io/resources/open-api/"
     }
 }
